raw-manifests/local-staging/minio/virtual-service-api.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: minio-api-staging-vs
  namespace: istio-system
spec:
  hosts:
    - "api.minio.staging.local"
  gateways:
    - istio-ingressgateway-staging
  http:
    - route:
        - destination:
            host: minio.minio.svc.cluster.local
            port:
              number: 443
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: minio-api-staging-dr
  namespace: istio-system
spec:
  host: minio.minio.svc.cluster.local
  trafficPolicy:
    tls:
      mode: SIMPLE
