raw-manifests/local-staging/minio/virtual-service-ui.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: minio-ui-staging-vs
  namespace: istio-system
spec:
  hosts:
    - "minio.staging.local"
  gateways:
    - istio-ingressgateway-staging
  http:
    - route:
        - destination:
            host: minio-staging-console.minio.svc.cluster.local
            port:
              number: 9443
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: minio-console-staging-dr
  namespace: istio-system
spec:
  host: minio-staging-console.minio.svc.cluster.local
  trafficPolicy:
    tls:
      mode: SIMPLE
