raw-manifests/local-staging/minio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: minio-staging-vs
  namespace: istio-system
spec:
  hosts:
    - "minio.staging.local"
  gateways:
    - istio-ingressgateway-staging
  http:
      - match:
          - uri:
              prefix: /api
        rewrite:
          uri: /
        route:
          - destination:
              host: minio-staging.minio.svc.cluster.local
              port:
                number: 9000
      - match:
          - uri:
              prefix: /console
        rewrite:
          uri: /
        route:
          - destination:
              host: minio-staging.minio.svc.cluster.local
              port:
                number: 9001
